# fraud-transactions-detection

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
notebooks/: 03_isolation_forest.ipynb
src/evaluation/: business_metric.py
src/fraud_transactions_detection.egg-info/: PKG-INFO  SOURCES.txt
src/utils/: aux_func.py  paths.py
